crates/solidity/testing/snapshots/bindings_output/yul/constructor_params/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:2:17]
   │
 2 │ ╭─▶     constructor (uint x) {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["Test" @ input.sol:1:10] (contract)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["constructor" @ input.sol:2:5]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     constructor (uint x) {
   │     ─────┬─────  
   │          ╰─────── ???
───╯
